Add meta tags for description, keywords, and author

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="description" content="Let's play an exciting online quiz game inspired by the famous 'Who Wants To Be a Millionaire' game show.">
+    <meta name="keywords" content="quiz, game show, online quiz, online game show, who wants to be a millionaire">
+    <meta name="author" content="Mark Gil Dacutan">
     <title>The Million Euro Quiz</title>
 </head>
 <body>
