Connect css and js external files to html homepage

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="keywords" content="quiz, game show, online quiz, online game show, who wants to be a millionaire">
     <meta name="author" content="Mark Gil Dacutan">
     <title>The Million Euro Quiz</title>
+    <!-- link to external css file -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <h1>Who Wants to be Rich</h1>
@@ -16,5 +18,7 @@
 
     <button>Play</button>
     <button>How to Play</button>
+    <!-- link to external javascript file -->
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
