--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <meta name="description" content="Let's play an exciting online quiz game inspired by the famous 'Who Wants To Be a Millionaire' game show.">
     <meta name="keywords" content="quiz, game show, online quiz, online game show, who wants to be a millionaire">
     <meta name="author" content="Mark Gil Dacutan">
+    
+    <!-- link from Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+
     <title>The Million Euro Quiz</title>
+    
     <!-- link to external css file -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
