--- a/game-page.html
+++ b/game-page.html
@@ -18,9 +18,15 @@
 <body>
     <header>
         <nav>
-            <h1 id="logo"><span id="logo-the">The</span> Million Euro <span id="logo-quiz">Quiz</span></h1>
+            <h1 id="logo">
+                <a href="">
+                    <span id="logo-the">The</span> 
+                    Million Euro 
+                    <span id="logo-quiz">Quiz</span>
+                </a>
+            </h1>
             <ul id="nav-menu">
-                <li>Home</li>
+                <li><a href="">Home</a></li>
                 <li>How to Play</li>
                 <li>Quit</li>
             </ul>
