--- a/game-page.html
+++ b/game-page.html
@@ -19,14 +19,14 @@
     <header>
         <nav>
             <h1 id="logo">
-                <a href="">
+                <a href="index.html">
                     <span id="logo-the">The</span> 
                     Million Euro 
                     <span id="logo-quiz">Quiz</span>
                 </a>
             </h1>
             <ul id="nav-menu">
-                <li><a href="">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li>How to Play</li>
                 <li>Quit</li>
             </ul>
