--- a/game-page.html
+++ b/game-page.html
@@ -67,7 +67,7 @@
         <div id="question-container">
             <!-- Question -->
             <h2>Question <span>1</span>:</h2>
-            <p id="question-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dignissimos beatae unde veritatis optio amet omnis nihil officiis totam velit laboriosam dolorum odit?</p>
+            <p id="question-text"></p>
             <!-- 30-second Timer -->
             <div id="timer">
                 <span id="timer-value">30</span>
