Add event listener to each answer option button

--- a/game-page.html
+++ b/game-page.html
@@ -76,10 +76,10 @@
         <!-- container for the answers-->
         <div id="answers-container">
             <!-- options for the answer -->
-            <button>A. <span id="option1-text">Option 1</span></button>
-            <button>B. <span id="option2-text">Option 2</span></button>
-            <button>C. <span id="option3-text">Option 3</span></button>
-            <button>D. <span id="option4-text">Option 4</span></button>
+            <button id="optionOneBtn">A. <span id="option1-text">Option 1</span></button>
+            <button id="optionTwoBtn">B. <span id="option2-text">Option 2</span></button>
+            <button id="optionThreeBtn">C. <span id="option3-text">Option 3</span></button>
+            <button id="optionFourBtn">D. <span id="option4-text">Option 4</span></button>
         </div>
     </section>
     <!-- link to external javascript file -->
