Change question number in game page as game progress

--- a/game-page.html
+++ b/game-page.html
@@ -66,7 +66,7 @@
         <!-- container for the question, and timer -->
         <div id="question-container">
             <!-- Question -->
-            <h2>Question <span>1</span>:</h2>
+            <h2>Question <span id="question-number">0</span>:</h2>
             <p id="question-text"></p>
             <!-- 30-second Timer -->
             <div id="timer">
