Change button element to anchor tag for play button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>Who Wants to be Rich</h1>
     <h2>Quiz Game</h2>
 
-    <button>Play</button>
+    <a href="game-page.html">Play</a>
     <button>How to Play</button>
     <!-- link to external javascript file -->
     <script src="assets/js/script.js"></script>
