--- a/game-page.html
+++ b/game-page.html
@@ -60,9 +60,9 @@
         <!-- Life Lines to help player choose the correct answer -->
         <div id="life-lines">
            <h2>Life Lines</h2>
-           <div data-type="remove-one-option" class="life-line-item"><i class="fas fa-hands-helping"></i></div>
-           <div data-type="remove-two-options" class="life-line-item"><i class="fas fa-life-ring"></i></div>
-           <div data-type="add-to-timer" class="life-line-item"><i class="fas fa-clock"></i></div> 
+           <div data-lifeline="remove-one-option" class="life-line-item"><i class="fas fa-hands-helping"></i></div>
+           <div data-lifeline="remove-two-options" class="life-line-item"><i class="fas fa-life-ring"></i></div>
+           <div data-lifeline="add-to-timer" class="life-line-item"><i class="fas fa-clock"></i></div> 
         </div>
         <!-- container for the question, and timer -->
         <div id="question-container">
