Fix initial layout of homepage logo

--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Who Wants to be Rich</h1>
-    <h2>Quiz Game</h2>
+    <div id="logo-wrapper">
+        <h1 id="logo-homepage">
+            <span id="logo-the">The</span> 
+            Million Euro 
+            <span id="logo-quiz">Quiz</span>
+        </h1>
+    </div>
 
     <a href="game-page.html">Play</a>
     <button>How to Play</button>
