Modify logo layout on home page

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <body>
     <div id="logo-wrapper">
         <h1 id="logo-homepage">
-            <span id="logo-the">The</span> 
+            <span id="logo-span-1">The</span> 
             Million Euro 
-            <span id="logo-quiz">Quiz</span>
+            <span id="logo-span-2">Quiz</span>
         </h1>
     </div>
 
