Add layout of play button on homepage

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </h1>
     </div>
 
-    <a href="game-page.html">Play</a>
-    <button>How to Play</button>
+    <a href="game-page.html" id="play-button">Play</a>
+    <button id="how-to-play-button">How to Play</button>
     <!-- link to external javascript file -->
     <script src="assets/js/script.js"></script>
 </body>
