Fix margins and structural layout of game area

--- a/game-page.html
+++ b/game-page.html
@@ -34,7 +34,7 @@
         </nav>
     </header>
     <!-- game area -->
-    <section>
+    <section id="game-area">
         <!-- shows progress in the game -->
         <progress value="2" max="15" role="progressbar" aria-label="progess in the game">2 of 15 questions</progress>
         <!-- displays the money to earn per question and player's current money earned  -->
