Modify layout of navbar and logo on gamepage

--- a/game-page.html
+++ b/game-page.html
@@ -19,13 +19,15 @@
 <body>
     <header>
         <nav>
-            <h1 id="logo">
-                <a href="index.html">
-                    <span id="logo-the">The</span> 
-                    Million Euro 
-                    <span id="logo-quiz">Quiz</span>
-                </a>
-            </h1>
+            <div id="logo-wrapper-gamepage">
+                <h1 id="logo-gamepage">
+                    <a href="index.html">
+                        <span>The</span> 
+                        Million Euro 
+                        <span>Quiz</span>
+                    </a>
+                </h1>
+            </div>
             <ul id="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li>How to Play</li>
