Modify style of 'money container' and its list items

--- a/game-page.html
+++ b/game-page.html
@@ -40,8 +40,8 @@
         <!-- shows progress in the game -->
         <progress value="2" max="15" role="progressbar" aria-label="progess in the game">2 of 15 questions</progress>
         <!-- displays the money to earn per question and player's current money earned  -->
-        <div id="money-progress-container">
-            <ul id="money-progress-list">
+        <div id="money-container">
+            <ul id="money-list">
                 <li>1 - &euro; 500</li>
                 <li>2 - &euro; 1,000</li>
                 <li>3 - &euro; 1,500</li>
