--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!-- Logo -->
     <div id="logo-wrapper">
         <h1 id="logo-homepage">
             <span id="logo-span-1">The</span> 
@@ -26,8 +27,11 @@
         </h1>
     </div>
 
+    <!-- play button -->
     <a href="game-page.html" id="play-button">Play</a>
+    <!-- 'how to play' button -->
     <button id="how-to-play-button">How to Play</button>
+
     <!-- link to external javascript file -->
     <script src="assets/js/script.js"></script>
 </body>
