Change css selector for 'close' icon

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- 'How To Play' Section -->
     <article id="how-to-play-container" class="hide">
-        <i class="fas fa-times" id="close-howToPlay"></i>
+        <i class="fas fa-times" id="close-how-to-play"></i>
         <h2 id="how-to-play-header">How to Play</h2>
         <p>To play this exciting game and win up to €1 million, read the following mechanics:</p>
         <section id="how-to-win">
@@ -72,7 +72,7 @@
             </ul>
         </section>
     </article>
-    
+
     <!-- link to Fontawesome -->
     <script src="https://kit.fontawesome.com/d037c16f69.js" crossorigin="anonymous"></script>
     <!-- link to external javascript file -->
