Modify main heading id of 'How to Play' section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- 'How To Play' Section -->
     <article id="how-to-play-container" class="hide">
         <i class="fas fa-times" id="close-how-to-play"></i>
-        <h2 id="how-to-play-header">How to Play</h2>
+        <h2 id="how-to-play-heading">How to Play</h2>
         <p>To play this exciting game and win up to €1 million, read the following mechanics:</p>
         <section id="how-to-win">
             <h3>How to win?</h3>
