Create new javascript for popup contents

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 
     <!-- link to Fontawesome -->
     <script src="https://kit.fontawesome.com/d037c16f69.js" crossorigin="anonymous"></script>
-    <!-- link to external javascript file -->
+    <!-- link to external popup javascript file -->
+    <script src="assets/js/popup.js"></script>
+    <!-- link to external main javascript file -->
     <script src="assets/js/script.js"></script>
 </body>
 </html>
