--- a/game-page.html
+++ b/game-page.html
@@ -61,10 +61,16 @@
         </div>
         <!-- Life Lines to help player choose the correct answer -->
         <div id="life-lines">
-           <h2>Life Lines</h2>
-           <div data-lifeline="remove-one-option" class="life-line-item"><i class="fas fa-hands-helping"></i></div>
-           <div data-lifeline="remove-two-options" class="life-line-item"><i class="fas fa-life-ring"></i></div>
-           <div data-lifeline="add-to-timer" class="life-line-item"><i class="fas fa-clock"></i></div> 
+            <h2>Life Lines</h2>
+            <div data-lifeline="remove-one-option" class="life-line-item">
+                <i class="fas fa-hands-helping lifeline-icon"></i>
+            </div>
+            <div data-lifeline="remove-two-options" class="life-line-item">
+                <i class="fas fa-life-ring lifeline-icon"></i>
+            </div>
+            <div data-lifeline="add-to-timer" class="life-line-item">
+                <i class="fas fa-clock lifeline-icon"></i>
+            </div> 
         </div>
         <!-- container for the question, and timer -->
         <div id="question-container">
