--- a/game-page.html
+++ b/game-page.html
@@ -64,12 +64,15 @@
             <h2>Life Lines</h2>
             <div data-lifeline="remove-one-option" class="life-line-item">
                 <i class="fas fa-hands-helping lifeline-icon"></i>
+                <span class="tooltip">Removes 1 wrong answer</span>
             </div>
             <div data-lifeline="remove-two-options" class="life-line-item">
                 <i class="fas fa-life-ring lifeline-icon"></i>
+                <span class="tooltip">Removes 2 wrong answers</span>
             </div>
             <div data-lifeline="add-to-timer" class="life-line-item">
                 <i class="fas fa-clock lifeline-icon"></i>
+                <span class="tooltip">Adds 30 sec more to your time</span>
             </div> 
         </div>
         <!-- container for the question, and timer -->
