Change id for 'how to play' button on homepage

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- play button -->
     <a href="game-page.html" id="play-button">Play</a>
     <!-- 'how to play' button -->
-    <button id="how-to-play-button">How to Play</button>
+    <button id="howtoplay-btn-homepage">How to Play</button>
 
     <!-- 'How To Play' Section -->
     <article id="how-to-play-container" class="hide">
