--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <button id="howtoplay-btn-homepage">How to Play</button>
 
     <!-- 'How To Play' Section -->
-    <article id="how-to-play-container" class="hide">
+    <article id="howtoplay-container" class="hide">
         <i class="fas fa-times" id="close-how-to-play"></i>
         <h2 id="how-to-play-heading">How to Play</h2>
         <p>To play this exciting game and win up to €1 million, read the following mechanics:</p>
