Add id to body element

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="quiz, game show, online quiz, online game show, who wants to be a millionaire">
     <meta name="author" content="Mark Gil Dacutan">
     
-    <!-- link from Google Fonts -->
+    <!-- link to Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
 
     <title>The Million Euro Quiz</title>
@@ -17,7 +17,7 @@
     <!-- link to external css file -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
+<body id="homepage-body">
     <!-- Logo -->
     <div id="logo-wrapper">
         <h1 id="logo-homepage">
@@ -75,8 +75,6 @@
 
     <!-- link to Fontawesome -->
     <script src="https://kit.fontawesome.com/d037c16f69.js" crossorigin="anonymous"></script>
-    <!-- link to external popup javascript file -->
-    <script src="assets/js/popup.js"></script>
     <!-- link to external main javascript file -->
     <script src="assets/js/script.js"></script>
 </body>
