--- a/game-page.html
+++ b/game-page.html
@@ -16,7 +16,7 @@
     <!-- link to external css file -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
+<body id="gamepage-body">
     <header>
         <nav>
             <div id="logo-wrapper-gamepage">
