Modify IDs of 'How to Play' modal for uniformity and re-style it

--- a/index.html
+++ b/index.html
@@ -32,47 +32,51 @@
     <!-- 'how to play' button -->
     <button id="howtoplay-btn-homepage">How to Play</button>
 
-    <!-- 'How To Play' Section -->
-    <article id="howtoplay-container" class="hide">
-        <i class="fas fa-times" id="close-how-to-play"></i>
-        <h2 id="how-to-play-heading">How to Play</h2>
-        <p>To play this exciting game and win up to €1 million, read the following mechanics:</p>
-        <section id="how-to-win">
-            <h3>How to win?</h3>
-            <ul>
-                <li>Answer correctly all 15 questions to win the €1 million.</li>
-                <li>Each question also corresponds to an amount of money.</li>
-            </ul>
-        </section>
-        <section id="when-is-gameover">
-            <h3>When is game over?</h3>
-            <ul>
-                <li>When wrong answer is selected, or</li>
-                <li>When time runs out, or</li>
-                <li>When all 15 questions are correctly.</li>
-            </ul>
-        </section>
-        <section id="how-questions-presented">
-            <h3>How are the questions presented?</h3>
-            <ul>
-                <li>Each question has 4 answer choices, but only 1 is correct.</li>
-                <li>You have 30 seconds for each question.</li>
-            </ul>
-        </section>
-        <section id="help-with-questions">
-            <h3>Life Lines to Help You</h3>
-            <ul>
-                <li>You have 3 lifelines.</li>
-                <img id="lifeline-image" src="assets/images/lifeline-icons.png" alt="screenshot of lifeline icons">
-                <li>1st icon removes 1 wrong answer</li>
-                <li>2nd icon removes 2 wrong answers</li>
-                <li>3rd icon adds 30 sec to the timer</li>
-                <li>Each lifeline can only be used ONCE in the course of the game.</li>
-                <li>You can use any and as many lifelines you want in a single question.</li>
-            </ul>
-        </section>
-    </article>
-
+    <!-- 'How To Play' Lightbox -->
+    <section id="howtoplay-outer-wrapper">
+        <article id="howtoplay-inner-wrapper">
+            <div class="close-icon-container">
+                <i class="fas fa-times" id="close-howtoplay"></i>
+            </div>
+            <h2 id="howtoplay-heading">How to Play</h2>
+            <p>To play this exciting game, read the following mechanics:</p>
+            <section>
+                <h3>How to win?</h3>
+                <ul>
+                    <li>Answer correctly all 15 questions to win the €1 million.</li>
+                    <li>Each question also corresponds to an amount of money.</li>
+                </ul>
+            </section>
+            <section>
+                <h3>When is game over?</h3>
+                <ul>
+                    <li>When wrong answer is selected, or</li>
+                    <li>When time runs out, or</li>
+                    <li>When all 15 questions are answered correctly.</li>
+                </ul>
+            </section>
+            <section>
+                <h3>How are the questions presented?</h3>
+                <ul>
+                    <li>Each question has 4 answer choices, but only 1 is correct.</li>
+                    <li>You have 30 seconds for each question.</li>
+                </ul>
+            </section>
+            <section>
+                <h3>Life Lines to Help You</h3>
+                <ul>
+                    <li>You have 3 life lines.</li>
+                    <img id="lifeline-image" src="assets/images/lifeline-icons.png" alt="screenshot of lifeline icons">
+                    <li>1st icon removes 1 wrong answer</li>
+                    <li>2nd icon removes 2 wrong answers</li>
+                    <li>3rd icon adds 30 sec to the timer</li>
+                    <li>Each lifeline can only be used ONCE in the course of the game.</li>
+                    <li>You can use any and as many lifelines you want in a question.</li>
+                </ul>
+            </section>
+        </article>
+    </section>
+    
     <!-- link to Fontawesome -->
     <script src="https://kit.fontawesome.com/d037c16f69.js" crossorigin="anonymous"></script>
     <!-- link to external main javascript file -->
