Add countdown to start lightbox

--- a/game-page.html
+++ b/game-page.html
@@ -35,7 +35,8 @@
             </ul>
         </nav>
     </header>
-    <!-- game area -->
+
+    <!-- GAME [Start]-->
     <section id="game-area">
         <!-- shows progress in the game -->
         <progress value="2" max="15" role="progressbar" aria-label="progess in the game">2 of 15 questions</progress>
@@ -102,6 +103,16 @@
             </button>
         </div>
     </section>
+    <!-- GAME AREA [End]-->
+
+    <!-- 'COUNTDOWN TO START' Lightbox [Start] -->
+    <section id="countdown-outer-wrapper">
+        <div id="countdown-inner-wrapper">
+            <span id="countdown">3</span>
+        </div>
+    </section>
+    <!-- 'COUNTDOWN TO START' Lightbox [End]  -->
+
     <!-- link to Fontawesome -->
     <script src="https://kit.fontawesome.com/d037c16f69.js" crossorigin="anonymous"></script>
     <!-- link to external javascript file -->
