--- a/game-page.html
+++ b/game-page.html
@@ -43,21 +43,21 @@
         <!-- displays the money to earn per question and player's current money earned  -->
         <div id="money-container">
             <ul id="money-list">
-                <li data-info="prize-500">1 - &euro; 500</li>
-                <li data-info="prize-1000">2 - &euro; 1,000</li>
-                <li data-info="prize-1500">3 - &euro; 1,500</li>
-                <li data-info="prize-2000">4 - &euro; 2,000</li>
-                <li data-info="prize-2500">5 - &euro; 2,500</li>
-                <li data-info="prize-5000">6 - &euro; 5,000</li>
-                <li data-info="prize-10_000">7 - &euro; 10,000</li>
-                <li data-info="prize-20_000">8 - &euro; 20,000</li>
-                <li data-info="prize-40_000">9 - &euro; 40,000</li>
-                <li data-info="prize-80_000">10 - &euro; 80,000</li>
-                <li data-info="prize-100_000">11 - &euro; 100,000</li>
-                <li data-info="prize-125_000">12 - &euro; 125,000</li>
-                <li data-info="prize-150_000">13 - &euro; 150,000</li>
-                <li data-info="prize-200_000">14 - &euro; 200,000</li>
-                <li data-info="prize-1-million">15 - &euro; 1,000,000</li>
+                <li data-prize="500">1 - &euro; 500</li>
+                <li data-prize="1,000">2 - &euro; 1,000</li>
+                <li data-prize="1,500">3 - &euro; 1,500</li>
+                <li data-prize="2,000">4 - &euro; 2,000</li>
+                <li data-prize="2,500">5 - &euro; 2,500</li>
+                <li data-prize="5,000">6 - &euro; 5,000</li>
+                <li data-prize="10,000">7 - &euro; 10,000</li>
+                <li data-prize="20,000">8 - &euro; 20,000</li>
+                <li data-prize="40,000">9 - &euro; 40,000</li>
+                <li data-prize="80,000">10 - &euro; 80,000</li>
+                <li data-prize="100,000">11 - &euro; 100,000</li>
+                <li data-prize="125,000">12 - &euro; 125,000</li>
+                <li data-prize="150,000">13 - &euro; 150,000</li>
+                <li data-prize="200,000">14 - &euro; 200,000</li>
+                <li data-prize="1-million">15 - &euro; 1,000,000</li>
             </ul>
         </div>
         <!-- Life Lines to help player choose the correct answer -->
