--- a/game-page.html
+++ b/game-page.html
@@ -113,19 +113,18 @@
     </div>
     <!-- 'COUNTDOWN TO START' Lightbox [End]  -->
 
-    <!-- 'GAME OVER 'Lightbox [Start]-->
+    <!-- 'GAME OVER' Lightbox [Start]-->
     <section id="gameover-outer-wrapper">
         <div id="gameover-inner-wrapper">
             <h2>Game Over</h2>
-            <p>We're sorry, <span id="username-span">Mark</span>, you lost!</p>
+            <p>We're sorry, <span id="username-gameover">Mark</span>, you lost!</p>
             <p>But you are going home with &euro;<span id="prize-won">500</span>!</p>
             <p>Not bad!</p>
-            <button id="play-again">Play Again</button>
+            <button id="play-again-gameover">Play Again</button>
             <a href="index.html">Home</a>
         </div>
     </section>
-    <!-- 'GAME OVER 'Lightbox [End]-->
-
+    <!-- 'GAME OVER' Lightbox [End]-->
 
     <!-- link to Fontawesome -->
     <script src="https://kit.fontawesome.com/d037c16f69.js" crossorigin="anonymous"></script>
