--- a/game-page.html
+++ b/game-page.html
@@ -126,6 +126,17 @@
     </section>
     <!-- 'GAME OVER' Lightbox [End]-->
 
+    <!-- 'GAME WON' Lightbox [Start]-->
+    <section id="gamewon-outer-wrapper">
+        <div id="gamewon-inner-wrapper">
+            <h2>Congratulations, <span id="username-gamewon">Mark</span>!</h2>
+            <p>You won &euro;<span id="grand-prize">1 Million</span>!</p>
+            <button id="play-again-gamewon">Play Again</button>
+            <a href="index.html">Home</a>
+        </div>
+    </section>
+    <!-- 'GAME WON' Lightbox [END]-->
+
     <!-- link to Fontawesome -->
     <script src="https://kit.fontawesome.com/d037c16f69.js" crossorigin="anonymous"></script>
     <!-- link to external javascript file -->
