Store and display player's name using sessionStorage

--- a/game-page.html
+++ b/game-page.html
@@ -38,8 +38,11 @@
 
     <!-- GAME [Start]-->
     <main id="game-area">
-        <!-- shows progress in the game -->
-        <progress value="2" max="15" aria-label="progess in the game">2 of 15 questions</progress>
+        <!-- player name and money earned -->
+        <section id="player-wrapper">
+            <h2>Player: <span id="player-name">Guest</span></h2>
+            <p>Money Earned: <span id="money-earned">0</span></p>
+        </section>
         <!-- displays the money to earn per question and player's current money earned  -->
         <div id="money-container">
             <ul id="money-list">
