Add close icon on 'Enter Username' lightbox

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <!-- 'ENTER USERNAME' Lightbox [Start] -->
     <section id="username-outer-wrapper">
         <div id="username-inner-wrapper">
+            <div class="close-username-container">
+                <i class="fas fa-times" id="close-username"></i>
+            </div>
             <h2>Enter Player's Name:</h2>
             <form id="username-form">
                 <input type="text" name="username" id="username" placeholder="your name here">
@@ -48,7 +51,7 @@
     <!-- 'HOW TO PLAY' Lightbox [Start] -->
     <section id="howtoplay-outer-wrapper">
         <article id="howtoplay-inner-wrapper">
-            <div class="close-icon-container">
+            <div class="close-howtoplay-container">
                 <i class="fas fa-times" id="close-howtoplay"></i>
             </div>
             <h2 id="howtoplay-heading">How to Play</h2>
