Add function to quit the game

--- a/game-page.html
+++ b/game-page.html
@@ -31,7 +31,7 @@
             <ul id="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li id="howtoplay-btn-gamepage">How to Play</li>
-                <li>Quit</li>
+                <li id="quit-link">Quit</li>
             </ul>
         </nav>
     </header>
@@ -138,7 +138,19 @@
             <a href="index.html">Home</a>
         </div>
     </section>
-    <!-- 'GAME WON' Lightbox [END]-->
+    <!-- 'GAME WON' Lightbox [End]-->
+
+    <!-- 'QUIT' Lightbox [Start]-->
+    <section id="quit-outer-wrapper">
+        <div id="quit-inner-wrapper">
+            <h2>Oops!</h2>
+            <p>You quit the game!</p>
+            <p>You're going home with NO MONEY.</p>
+            <button id="play-again-quitter">Play Again</button>
+            <a href="index.html">Home</a>
+        </div>
+    </section>
+    <!-- 'QUIT' Lightbox [End]-->
 
     <!-- link to Fontawesome -->
     <script src="https://kit.fontawesome.com/d037c16f69.js" crossorigin="anonymous"></script>
