Update text with slight add-on

--- a/game-page.html
+++ b/game-page.html
@@ -41,7 +41,7 @@
         <!-- player name and money earned -->
         <section id="player-wrapper">
             <h2>Player: <span id="player-name">Guest</span></h2>
-            <p>Money Earned: <span id="money-earned">0</span></p>
+            <p>Money Earned: &euro; <span id="money-earned">0</span></p>
         </section>
         <!-- displays the money to earn per question and player's current money earned  -->
         <div id="money-container">
@@ -121,7 +121,7 @@
         <div id="gameover-inner-wrapper">
             <h2>Game Over</h2>
             <p>We're sorry, <span id="username-gameover">Mark</span>, you lost!</p>
-            <p>But you are going home with &euro;<span id="prize-won">500</span>!</p>
+            <p>But you're going home with &euro;<span id="prize-won">0</span>!</p>
             <p>Not bad!</p>
             <button id="play-again-gameover">Play Again</button>
             <a href="index.html">Home</a>
