--- a/game-page.html
+++ b/game-page.html
@@ -121,8 +121,8 @@
         <div id="gameover-inner-wrapper">
             <h2>Game Over</h2>
             <p>We're sorry, <span id="username-gameover">Mark</span>, you lost!</p>
-            <p>But you're going home with &euro;<span id="prize-won">0</span>!</p>
-            <p>Not bad!</p>
+            <p>You're going home with &euro;<span id="prize-won">0</span>!</p>
+            <span class="not-bad hide">Not bad!</span>
             <button id="play-again-gameover">Play Again</button>
             <a href="index.html">Home</a>
         </div>
