Add 'How to Play' lightbox by appending via js on gamepage

--- a/game-page.html
+++ b/game-page.html
@@ -152,6 +152,10 @@
     </section>
     <!-- 'QUIT' Lightbox [End]-->
 
+    <!-- 'HOW TO PLAY' Lightbox [Start] -->
+    <section id="howtoplay-outer-wrapper"></section>
+    <!-- 'HOW TO PLAY' Lightbox [End] -->
+
     <!-- link to Fontawesome -->
     <script src="https://kit.fontawesome.com/d037c16f69.js" crossorigin="anonymous"></script>
     <!-- link to external javascript file -->
