Modify to display 'How to Play' lightbox from js on homepage

--- a/index.html
+++ b/index.html
@@ -49,49 +49,7 @@
     <!-- 'ENTER USERNAME' Lightbox [End] -->
 
     <!-- 'HOW TO PLAY' Lightbox [Start] -->
-    <section id="howtoplay-outer-wrapper">
-        <article id="howtoplay-inner-wrapper">
-            <div class="close-howtoplay-container">
-                <i class="fas fa-times" id="close-howtoplay"></i>
-            </div>
-            <h2 id="howtoplay-heading">How to Play</h2>
-            <p>To play this exciting game, read the following mechanics:</p>
-            <section>
-                <h3>How to win?</h3>
-                <ul>
-                    <li>Answer correctly all 15 questions to win the €1 million.</li>
-                    <li>Each question also corresponds to an amount of money.</li>
-                </ul>
-            </section>
-            <section>
-                <h3>When is game over?</h3>
-                <ul>
-                    <li>When wrong answer is selected, or</li>
-                    <li>When time runs out, or</li>
-                    <li>When all 15 questions are answered correctly.</li>
-                </ul>
-            </section>
-            <section>
-                <h3>How are the questions presented?</h3>
-                <ul>
-                    <li>Each question has 4 answer choices, but only 1 is correct.</li>
-                    <li>You have 30 seconds for each question.</li>
-                </ul>
-            </section>
-            <section>
-                <h3>Life Lines to Help You</h3>
-                <ul>
-                    <li>You have 3 life lines.</li>
-                    <img id="lifeline-image" src="assets/images/lifeline-icons.png" alt="screenshot of lifeline icons">
-                    <li>1st icon removes 1 wrong answer</li>
-                    <li>2nd icon removes 2 wrong answers</li>
-                    <li>3rd icon adds 30 sec to the timer</li>
-                    <li>Each lifeline can only be used ONCE in the course of the game.</li>
-                    <li>You can use any and as many lifelines you want in a question.</li>
-                </ul>
-            </section>
-        </article>
-    </section>
+    <section id="howtoplay-outer-wrapper"></section>
     <!-- 'HOW TO PLAY' Lightbox [End] -->
 
     <!-- link to Fontawesome -->
