Display initial question and answer options after 3-second countdown

--- a/game-page.html
+++ b/game-page.html
@@ -93,16 +93,16 @@
         <div id="answers-container">
             <!-- options for the answer -->
             <button class="answer-button" id="answer-option-a">
-                A. <span id="option1-text">Option 1</span>
+                A. <span id="option1-text"> </span>
             </button>
             <button class="answer-button" id="answer-option-b">
-                B. <span id="option2-text">Option 2</span>
+                B. <span id="option2-text"> </span>
             </button>
             <button class="answer-button" id="answer-option-c">
-                C. <span id="option3-text">Option 3</span>
+                C. <span id="option3-text"> </span>
             </button>
             <button class="answer-button" id="answer-option-d">
-                D. <span id="option4-text">Option 4</span>
+                D. <span id="option4-text"> </span>
             </button>
         </div>
     </main>
