Change minor text content

--- a/game-page.html
+++ b/game-page.html
@@ -120,7 +120,7 @@
     <section id="gameover-outer-wrapper">
         <div id="gameover-inner-wrapper">
             <h2>Game Over</h2>
-            <p>We're sorry, <span id="username-gameover">Mark</span>, you lost!</p>
+            <p>We're sorry, <span id="username-gameover">Player Name</span>, you lost!</p>
             <p>You're going home with &euro;<span id="prize-won">0</span>!</p>
             <span class="not-bad hide">Not bad!</span>
             <button id="play-again-gameover">Play Again</button>
