Change ID names of the logo

--- a/game-page.html
+++ b/game-page.html
@@ -19,8 +19,8 @@
 <body id="gamepage-body">
     <header>
         <nav>
-            <div id="logo-wrapper-gamepage">
-                <h1 id="logo-gamepage">
+            <div id="logo-wrapper-nav">
+                <h1 id="logo-nav">
                     <a href="index.html">
                         <span>The</span> 
                         Million Euro 
