--- a/game-page.html
+++ b/game-page.html
@@ -13,8 +13,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
 
     <title>The Million Euro Quiz</title>
+    
     <!-- link to external css file -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- link to favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
 </head>
 <body id="gamepage-body">
     <header>
